--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+  "express": "^4.18.2",
+  "@wppconnect-team/wppconnect": "^1.10.1"
   }
 }
